--- a/packages/examples/src/style.css
+++ b/packages/examples/src/style.css
@@ -57,13 +57,20 @@ button:focus-visible {
 .card {
   padding: 2em;
 }
-
+html,
+body,
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  background: #000;
 }
+
+/* #app {
+  height: 100%;
+  width: calc(100vh * 9 / 16)
+} */
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
