--- a/packages/app/src/App.css
+++ b/packages/app/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  overflow: hidden; */
+  /* min-width:1280px; */
 }
