--- a/packages/app/src/index.css
+++ b/packages/app/src/index.css
@@ -1,3 +1,5 @@
+@import url('./styles/common.less');
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -5,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,12 +23,17 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+html,body{
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
+  background-color: #fff;
   place-items: center;
   min-width: 320px;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -66,3 +73,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
