--- a/packages/app/src/components/Layout/styles.module.less
+++ b/packages/app/src/components/Layout/styles.module.less
@@ -1,9 +1,14 @@
 .main{
   background-color:#fff;
-  max-height: 100vh;
   padding-left: 200px;
   padding-top: 50px;
-  overflow-y: auto;
   width: 100vw;
+  height:100vh;
   color: rgba(0,0,0,.7);
+}
+
+.content{
+  overflow-y: auto;
+  min-height: 600px;
+  height: 100%;
 }
