--- a/packages/app/src/components/SideMenu/styles.module.less
+++ b/packages/app/src/components/SideMenu/styles.module.less
@@ -7,6 +7,7 @@
   top: 50px;
   width: 200px;
   z-index: 11;
+  overflow-y: auto;
   :global(.ant-menu) {
     border-inline-end:0px !important;
   }
