--- a/packages/app/src/pages/workspace/material/component/index.less
+++ b/packages/app/src/pages/workspace/material/component/index.less
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   .material-item {
-    flex: 0 0 16.6%;
-    max-width: 16.6%;
+    // flex: 0 0 12.5%;
+    // max-width: 12.5%;
     border-radius: 6px;
     padding: 8px 8px 0;
     cursor: pointer;
