--- a/packages/app/src/pages/editor/components/Material/styles.module.less
+++ b/packages/app/src/pages/editor/components/Material/styles.module.less
@@ -1,7 +1,7 @@
 .material {
   height: 100%;
   background: inherit;
-
+  height: 100%;
   .tabs {
     height: 100%;
     background: inherit;
@@ -27,6 +27,9 @@
       .ant-tabs-content-holder {
         background: inherit;  // 继承父级背景色
       }
+      .ant-tabs-content{
+        height: 100%;
+      }
 
       .ant-tabs-tab {
         padding: 4px 16px;
@@ -43,12 +46,12 @@
         }
 
         &.ant-tabs-tab-active .ant-tabs-tab-btn {
-          color: #52c41a;
+          // color: #00B9C4;
         }
       }
 
       .ant-tabs-ink-bar {
-        background: #52c41a;
+        // background: #00B9C4;
       }
       .ant-tabs-content-holder {
         height: calc(100% - 56px);
