--- a/packages/app/src/styles/editors/index.less
+++ b/packages/app/src/styles/editors/index.less
@@ -7,3 +7,10 @@
 .hz-editor-card {
   background-color: var(--color-editor-700);
 }
+
+.hz-editor-primary-color{
+  color: #00b9c4;
+}
+.text-main{
+  color: #00b9c4 !important
+}
