--- a/packages/app/src/pages/editor/components/Material/components/Material/components/List/styles.module.less
+++ b/packages/app/src/pages/editor/components/Material/components/Material/components/List/styles.module.less
@@ -5,7 +5,7 @@
   background: inherit;
 
   .header {
-    padding: 16px;
+    // padding: 16px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     display: flex;
     justify-content: space-between;
