--- a/packages/app/src/pages/editor/components/Material/components/Import/index.less
+++ b/packages/app/src/pages/editor/components/Material/components/Import/index.less
@@ -7,3 +7,39 @@
 }
 
 }
+.map-search{
+  // .ant-select-selector{
+  //   color:#fff;
+  //   background-color: rgba(0,0,0,0.6)!important;
+  // }  
+  // .ant-select-selection-placeholder {
+  //   color: rgba(255, 255, 255, 0.65);
+  // }
+  input::placeholder {
+    color: rgba(255, 255, 255, 0.65);
+  }
+}
+.auto-complete1{
+  // .ant-select-selector{
+  //   color:#fff;
+  //   background-color: rgba(0,0,0,0.8) !important;
+  // }
+  // :global{
+    
+  // }
+  // .ant-select-selector{
+  //   color:#fff;
+  //   background-color: oklab(0 0 0 / 0.8) !important;
+  // }  
+ 
+}
+.map-search-popup{
+  .ant-select-item {
+    color: #fff;
+  }
+  .ant-select-item-option-active{
+    background-color: rgba(255, 255, 255, 0.1) !important;
+
+  }
+
+}
