--- a/packages/app/src/pages/user/login/index.css
+++ b/packages/app/src/pages/user/login/index.css
@@ -1,4 +1,4 @@
-.container {
+.login-container {
     background-image: url('@/assets/bg.png');
     background-size: cover;
     width: 100vw;
@@ -42,6 +42,7 @@
         border-radius: 5%;
         padding: 26px;
         height: auto;
+        max-height: 440px;
     }
 
     .signTitle {
