--- a/packages/app/src/pages/editor/components/Material/components/Import/index.less
+++ b/packages/app/src/pages/editor/components/Material/components/Import/index.less
@@ -1,31 +1,38 @@
-.import-material{
-.search{
-  .ant-input::placeholder {
-    color: #4A4B4F;
+.import-material {
+  .search {
+    .ant-input::placeholder {
+      color: #4a4b4f;
+    }
   }
 }
-
-}
-.map-search{
+.map-search {
   input::placeholder {
     color: rgba(255, 255, 255, 0.65);
   }
 }
-.auto-complete1{
- 
+.auto-complete1 {
 }
-.map-search-popup{
+.map-search-popup {
   .ant-select-item {
     color: #fff;
   }
-  .ant-select-item-option-active{
+  .ant-select-item-option-active {
     background-color: rgba(255, 255, 255, 0.1) !important;
-
   }
-
 }
-.map-spin{
-  .ant-spin-container{
+.map-spin {
+  .ant-spin-container {
     height: 100%;
+  }
+}
+.geometry-style-form {
+  .ant-form-item {
+    margin-bottom: 12px;
+  }
+  .ant-form-item .ant-form-item-label > label {
+    color: #fff;
+  }
+  .ant-slider .ant-slider-rail{
+    background-color: #fff;
   }
 }
